<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:id="@+id/btn_mul"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:onClick="onClick"
        android:text="@string/btn_mul"
        style="@style/SymbolLightStyle"/>
    <Button
        android:id="@+id/btn_sub"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:onClick="onClick"
        android:text="@string/btn_sub"
        style="@style/SymbolLightStyle"/>
    <Button
        android:id="@+id/btn_add"
        android:layout_weight="1"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/btn_add"
        style="@style/SymbolLightStyle"/>
    <Button
        android:id="@+id/btn_equ"
        android:layout_weight="2"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/btn_equ"
        style="@style/SymbolLightStyle"
        />
</merge>