<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

        <Button
            android:id="@+id/btn_c"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onClick"
            android:text="@string/btn_C"
            style="@style/SymbolDarkStyle"/>
        <Button
            android:id="@+id/btn_del"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:onClick="onClick"
            android:layout_height="match_parent"
            android:text="@string/btn_Del"
            style="@style/SymbolDarkStyle"/>
        <Button
            android:id="@+id/btn_div"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:onClick="onClick"
            android:layout_height="match_parent"
            android:text="@string/btn_div"
            style="@style/SymbolDarkStyle"/>

</merge>